--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -66,8 +66,11 @@ layout: default
 
         {% include previousAndNext.html %}
 
-        <h2 id="comments">Comments</h2>
-        {% include comments.html %}
+        {% if site.comments_enabled %}
+            <h2 id="comments">Comments</h2>
+            {% include comments.html %}
+        {% endif %}
+       
 
 
     </div>
@@ -84,7 +87,9 @@ layout: default
                     {% if hasSimilar.size > 0 %}
                     <li><a href="#similar_posts">Similar Posts</a></li>
                     {% endif %}
+                    {% if site.comments_enabled %}
                     <li><a href="#comments">Comments</a></li>
+                    {% endif %}
                 </ul>
             </div>
             <!-- 其他div框放到这里 -->
